crates/lang-parse/tests/snapshots/parser__parser_pub-part.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x73f03eaaf3fba7cd",
        output_hash: "0x10aee666221260c2",
        tree: (
            span: (
                start: 0,
                end: 84,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 84,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Workbench((
                        span: (
                            start: 0,
                            end: 84,
                        ),
                        keyword_span: (
                            start: 4,
                            end: 8,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 84,
                            ),
                            lines: [],
                        ),
                        kind: Part,
                        attr: ([]),
                        vis: Some((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            value: Public,
                        )),
                        id: (
                            span: (
                                start: 9,
                                end: 14,
                            ),
                            name: "Wheel",
                        ),
                        parameters: (
                            span: (
                                start: 15,
                                end: 43,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parameters: [
                                (
                                    span: (
                                        start: 15,
                                        end: 29,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    doc: (
                                        span: (
                                            start: 15,
                                            end: 15,
                                        ),
                                        lines: [],
                                    ),
                                    attr: ([]),
                                    id: (
                                        span: (
                                            start: 15,
                                            end: 21,
                                        ),
                                        name: "radius",
                                    ),
                                    ty: Some(Single((
                                        span: (
                                            start: 23,
                                            end: 29,
                                        ),
                                        name: "Length",
                                    ))),
                                    default: None,
                                ),
                                (
                                    span: (
                                        start: 30,
                                        end: 43,
                                    ),
                                    extras: (
                                        leading: ([
                                            Whitespace((" ")),
                                        ]),
                                        trailing: ([]),
                                    ),
                                    doc: (
                                        span: (
                                            start: 31,
                                            end: 31,
                                        ),
                                        lines: [],
                                    ),
                                    attr: ([]),
                                    id: (
                                        span: (
                                            start: 31,
                                            end: 37,
                                        ),
                                        name: "height",
                                    ),
                                    ty: None,
                                    default: Some(Literal((
                                        span: (
                                            start: 40,
                                            end: 43,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Quantity((
                                            span: (
                                                start: 40,
                                                end: 43,
                                            ),
                                            value: "1",
                                            unit: (
                                                span: (
                                                    start: 41,
                                                    end: 43,
                                                ),
                                                name: "mm",
                                            ),
                                        )),
                                    ))),
                                ),
                            ],
                        ),
                        body: (
                            span: (
                                start: 45,
                                end: 84,
                            ),
                            statements: (
                                span: (
                                    start: 46,
                                    end: 83,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                statements: [
                                    (Expression((
                                        span: (
                                            start: 46,
                                            end: 82,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        attr: ([]),
                                        expr: Call((
                                            span: (
                                                start: 46,
                                                end: 82,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            path: (
                                                span: (
                                                    start: 46,
                                                    end: 66,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                prefix: None,
                                                parts: [
                                                    (
                                                        span: (
                                                            start: 46,
                                                            end: 49,
                                                        ),
                                                        name: "std",
                                                    ),
                                                    (
                                                        span: (
                                                            start: 51,
                                                            end: 56,
                                                        ),
                                                        name: "geo3d",
                                                    ),
                                                    (
                                                        span: (
                                                            start: 58,
                                                            end: 66,
                                                        ),
                                                        name: "Cylinder",
                                                    ),
                                                ],
                                            ),
                                            arguments: (
                                                span: (
                                                    start: 67,
                                                    end: 81,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                arguments: [
                                                    Unnamed((
                                                        span: (
                                                            start: 67,
                                                            end: 73,
                                                        ),
                                                        extras: (
                                                            leading: ([]),
                                                            trailing: ([]),
                                                        ),
                                                        expr: SymbolPath((
                                                            span: (
                                                                start: 67,
                                                                end: 73,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            prefix: None,
                                                            parts: [
                                                                (
                                                                    span: (
                                                                        start: 67,
                                                                        end: 73,
                                                                    ),
                                                                    name: "radius",
                                                                ),
                                                            ],
                                                        )),
                                                    )),
                                                    Unnamed((
                                                        span: (
                                                            start: 75,
                                                            end: 81,
                                                        ),
                                                        extras: (
                                                            leading: ([]),
                                                            trailing: ([]),
                                                        ),
                                                        expr: SymbolPath((
                                                            span: (
                                                                start: 75,
                                                                end: 81,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            prefix: None,
                                                            parts: [
                                                                (
                                                                    span: (
                                                                        start: 75,
                                                                        end: 81,
                                                                    ),
                                                                    name: "height",
                                                                ),
                                                            ],
                                                        )),
                                                    )),
                                                ],
                                            ),
                                        )),
                                    )), ([])),
                                ],
                                tail: None,
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
