crates/lang-parse/tests/snapshots/parser__parser_qualified name.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..8,
            statements: StatementList {
                span: 0..8,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..8,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: Attributes(
                            [],
                        ),
                        expr: QualifiedName(
                            QualifiedName {
                                span: 0..8,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parts: [
                                    Identifier {
                                        span: 0..3,
                                        name: "foo",
                                    },
                                    Identifier {
                                        span: 5..8,
                                        name: "bar",
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
