crates/lang-parse/tests/snapshots/parser__parser_quantity float.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x4fc049572f7c5f86",
        output_hash: "0x4e7db603a3c921de",
        tree: (
            span: (
                start: 0,
                end: 4,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 4,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 4,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 4,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Quantity((
                            span: (
                                start: 0,
                                end: 4,
                            ),
                            value: ".2",
                            unit: (
                                span: (
                                    start: 2,
                                    end: 4,
                                ),
                                name: "mm",
                            ),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
