crates/lang-parse/tests/snapshots/parser__parser_quantity int.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x121153a34fd9f9ee",
        output_hash: "0xa99b696576a9ef34",
        tree: (
            span: (
                start: 0,
                end: 3,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 3,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 3,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Quantity((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            value: 1.0,
                            raw: "1",
                            unit: (
                                span: (
                                    start: 1,
                                    end: 3,
                                ),
                                name: "mm",
                            ),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
