crates/lang-parse/tests/snapshots/parser__parser_range.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xbdcc23ed4952060b",
        output_hash: "0x7b9550c29e8d16",
        tree: (
            span: (
                start: 0,
                end: 7,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 7,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 7,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Range((
                        span: (
                            start: 0,
                            end: 7,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        start: (
                            span: (
                                start: 1,
                                end: 2,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            expr: Literal((
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 1,
                                        end: 2,
                                    ),
                                    value: "1",
                                )),
                            )),
                        ),
                        end: (
                            span: (
                                start: 4,
                                end: 6,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            expr: Literal((
                                span: (
                                    start: 4,
                                    end: 6,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 4,
                                        end: 6,
                                    ),
                                    value: "10",
                                )),
                            )),
                        ),
                        unit: None,
                    )),
                )),
            ),
        ),
    ),
)
---
