crates/lang-parse/tests/snapshots/parser__parser_single float.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..3,
            statements: StatementList {
                span: 0..3,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..3,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: Attributes(
                            [],
                        ),
                        expr: Literal(
                            Literal {
                                span: 0..3,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                literal: Float(
                                    FloatLiteral {
                                        span: 0..3,
                                        value: 1.2,
                                        raw: "1.2",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
