crates/lang-parse/tests/snapshots/parser__parser_single int.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..1,
            statements: StatementList {
                span: 0..1,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..1,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: [],
                        expr: Literal(
                            Literal {
                                span: 0..1,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 0..1,
                                        value: 1,
                                        raw: "1",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
